[project]
name = "donatellopayments"
version = "0.1.0"
description = "This API allows you to make payments using Donatello."
authors = [
    { name = "Netronis" }
]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
